{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 20,
  "lineage": "ab5ba6cc-3bb7-8625-0246-b428c6986cb1",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932930471390:vpc/vpc-0538ad7c1d33c9467",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0292f0139187bf530",
            "default_route_table_id": "rtb-090309936bbbb636a",
            "default_security_group_id": "sg-0a0b64f376b62ed95",
            "dhcp_options_id": "dopt-0ad34f465b2101dfd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0538ad7c1d33c9467",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090309936bbbb636a",
            "owner_id": "932930471390",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:932930471390:instance/i-06b12810d3aa9f9ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b12810d3aa9f9ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-020e5f4bb9315382d"
              }
            ],
            "primary_network_interface_id": "eni-020e5f4bb9315382d",
            "private_dns": "ip-172-31-25-231.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.231",
            "public_dns": "ec2-98-93-226-86.compute-1.amazonaws.com",
            "public_ip": "98.93.226.86",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04eebcc9d1868df1d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f1bd1a19c6806b0",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f245560cc07c06d9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "932930471390",
            "id": "i-06b12810d3aa9f9ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default",
            "module.dev-infra.aws_key_pair.my_key",
            "module.dev-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932930471390:security-group/sg-0f245560cc07c06d9",
            "description": "This will add a TF generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f245560cc07c06d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-infra-app-sg",
            "name_prefix": "",
            "owner_id": "932930471390",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-infra-app-sg"
            },
            "tags_all": {
              "Name": "dev-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0538ad7c1d33c9467"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "932930471390",
            "id": "sg-0f245560cc07c06d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932930471390:vpc/vpc-0538ad7c1d33c9467",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0292f0139187bf530",
            "default_route_table_id": "rtb-090309936bbbb636a",
            "default_security_group_id": "sg-0a0b64f376b62ed95",
            "dhcp_options_id": "dopt-0ad34f465b2101dfd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0538ad7c1d33c9467",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090309936bbbb636a",
            "owner_id": "932930471390",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:932930471390:instance/i-00de1550991c93b59",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00de1550991c93b59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prd-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08a4575b6d84b9a33"
              }
            ],
            "primary_network_interface_id": "eni-08a4575b6d84b9a33",
            "private_dns": "ip-172-31-18-105.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.105",
            "public_dns": "ec2-3-91-69-108.compute-1.amazonaws.com",
            "public_ip": "3.91.69.108",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09cf2b78b9140caac",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prd-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f1bd1a19c6806b0",
            "tags": {
              "Environment": "prd",
              "Name": "prd-infra-app-instance"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af9e28bd35085196"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "932930471390",
            "id": "i-00de1550991c93b59",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prd-infra.aws_default_vpc.default",
            "module.prd-infra.aws_key_pair.my_key",
            "module.prd-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932930471390:security-group/sg-0af9e28bd35085196",
            "description": "This will add a TF generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af9e28bd35085196",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prd-infra-app-sg",
            "name_prefix": "",
            "owner_id": "932930471390",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-infra-app-sg"
            },
            "tags_all": {
              "Name": "prd-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0538ad7c1d33c9467"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "932930471390",
            "id": "sg-0af9e28bd35085196",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prd-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932930471390:vpc/vpc-0538ad7c1d33c9467",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0292f0139187bf530",
            "default_route_table_id": "rtb-090309936bbbb636a",
            "default_security_group_id": "sg-0a0b64f376b62ed95",
            "dhcp_options_id": "dopt-0ad34f465b2101dfd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0538ad7c1d33c9467",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090309936bbbb636a",
            "owner_id": "932930471390",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:932930471390:instance/i-0de0cc7fd310b2978",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de0cc7fd310b2978",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "stg-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0cdd2a030f5f2c197"
              }
            ],
            "primary_network_interface_id": "eni-0cdd2a030f5f2c197",
            "private_dns": "ip-172-31-31-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.53",
            "public_dns": "ec2-54-226-194-182.compute-1.amazonaws.com",
            "public_ip": "54.226.194.182",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0acd51a28e1991562",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f1bd1a19c6806b0",
            "tags": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0067727d6b30a75d0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "932930471390",
            "id": "i-0de0cc7fd310b2978",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default",
            "module.stg-infra.aws_key_pair.my_key",
            "module.stg-infra.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ecb62995f68bb549",
            "arn": "arn:aws:ec2:us-east-1:932930471390:instance/i-0afe6d03ddc86c580",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afe6d03ddc86c580",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "stg-infra-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ff5d3d213baef90a"
              }
            ],
            "primary_network_interface_id": "eni-0ff5d3d213baef90a",
            "private_dns": "ip-172-31-28-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.142",
            "public_dns": "ec2-54-226-252-119.compute-1.amazonaws.com",
            "public_ip": "54.226.252.119",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f9c027944479848d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f1bd1a19c6806b0",
            "tags": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-infra-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0067727d6b30a75d0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "932930471390",
            "id": "i-0afe6d03ddc86c580",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default",
            "module.stg-infra.aws_key_pair.my_key",
            "module.stg-infra.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:932930471390:security-group/sg-0067727d6b30a75d0",
            "description": "This will add a TF generated security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0067727d6b30a75d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Open",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Open",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "stg-infra-app-sg",
            "name_prefix": "",
            "owner_id": "932930471390",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stg-infra-app-sg"
            },
            "tags_all": {
              "Name": "stg-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0538ad7c1d33c9467"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "932930471390",
            "id": "sg-0067727d6b30a75d0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}